  variables and constraint names 
- new callback method SCIP_DECL_READERWRITE(x) in type_reader.h; this method is called  
  to write a problem to file stream in the format the reader stands for;
  useful for writing the transformed problem in LP or MPS format
- new parameter "conshdlrname" in SCIPincludeLinconsUpgrade() 

features:
- the MPS reader is now able to write a problem in MPS format
- new method SCIPwriteOrigProblem(), e.g., 
  SCIPwriteOrigProblem(scip, "orig.lp", FALSE) prints the original problem in LP format in the file "orig.lp"
- new method SCIPwriteTransProblem(), e.g.,
  SCIPwriteOrigProblem(scip, NULL, FALSE) displays the transformed problem in CIP format 
- new method SCIPgetProbvarLinearSum()
- added SOS2 example
- extended TSP example
- the ZIMPL reader now understands SOS type 1 and 2 constraints
- the LP reader reads SOS constraints of type 1 and 2
- the MPS reader reads the SOS section (but cannot yet handle 'MARKERS')
- output of real values is now done with 15 digits after the decimal point
- new method SCIPgetResultantAnd() which return the resultant variable of an "and" constraint 

plugins:
- added first version of SOS type 1 constraint handler (cons_sos.{c,h})
- added first version of SOS type 2 constraint handler (cons_sos.{c,h})
- less aggressive scaling in linear constraint handler presolve to improve numerics

parameters:
- new parameter "constraints/linear/aggregatevariables" to search for aggregations in equations in the presolving step
- changed parameter default values for the priority of presolver "dualfix" and "inttobinary"
- new parameter "constraint/linear/upgrade/binpack" to enable or disable the linear upgrading process
- new parameter "constraint/linear/upgrade/eqknapsack" to enable or disable the linear upgrading process
- new parameter "constraint/linear/upgrade/invarknapsack" to enable or disable the linear upgrading process